Made some style change to the index.html and styles

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             like GIF pictures, stickers, icons, images, cartoon text, preset audio etc in an impressive and entertaining manner.
           </p>
           <div class="btn-container">
-            <div class="btn pulse-anim">Learn More</div>
-            <div class="btn pulse-anim">Get started</div>
+            <div class="btn">Learn More</div>
+            <div class="btn">Get started</div>
           </div>
         </div>     
       </div>
