Created the module for preloader in the html and css files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
     <script src="lib/sweetAlert2.js"></script>
 </head>
 <body>
-    
+    <!-- Preloader for the loading page -->
+    <div id="preloader">
+      <div class="waviy">
+        <span style="--i:1">C</span>
+        <span style="--i:2">h</span>
+        <span style="--i:3">a</span>
+        <span style="--i:4">t</span>
+        <span style="--i:5">t</span>
+        <span style="--i:6">y</span>
+        <span style="--i:7">.</span>
+        <span style="--i:8">.</span>
+        <span style="--i:9">.</span>
+    </div>
+  </div>
+  <!-- End of Preloader -->
+  
         <!-- chatty navbar -->
         <nav class="container-fluid navbar navbar-expand-md navbar-light bg-light fixed-navbar" aria-label="Chatty" >
             <div class="container-fluid"  >
