--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
       <div class="col-lg-8 text-center text-lg-start my-md-3">
-        <h1 class="display-6 fw-bold lh-1 mb-3 text-capitalize text-start text-md-center text-lg-start px-2 px-md-0 py-1 hero-text-1">Chatty! home of trending gif & stickers</h1>
+        <h1 class="display-6 fw-boldgit  lh-1 mb-3 text-capitalize text-start text-md-center text-lg-start px-2 px-md-0 py-1 hero-text-1">Chatty! home of trending gif & stickers</h1>
         <p class="col-lg-10 fs-5 p-2 text-start text-lg-start">
             Chatty is a chat assey hub where you can get tons of chat assets like
             
