Tried to implement the typing animation

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </div>
       <div class="container">
         <div class="intro">
-          <h1>Talk Easily, Impress, Entertain <span>Loved</span> Ones</h1>
-          <p>Chatty affords you the opportunity to organize and deliver your thoughts in an easy way using chat assets
+          <h1 id="introHeader"><span class="cursor">&nbsp;</span></h1>
+          <p id="introText">Chatty affords you the opportunity to organize and deliver your thoughts in an easy way using chat assets
             like GIF pictures, stickers, icons, images, cartoon text, preset audio etc in an impressive and entertaining manner.
           </p>
           <div class="btn-container">
@@ -64,5 +64,6 @@
         </div>     
       </div>
     </header>
+    <script src="lib/typing.js"></script>
 </body>
 </html>
