--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
     <header class="homepage">
       <div class="absolute-img">
-        <img src="assets/chat illustration.png" class="smooth-zigzag-anim-3">
+        <img src="assets/chat illustration.png" class="drop-anim">
         <img src="assets/chat illustration2.png" class="smooth-zigzag-anim-2">
-        <img src="assets/chat illustration3.png" class="drop-anim">
+        <img src="assets/chat illustration3.png" class="smooth-zigzag-anim-3">
         <img src="assets/chat illustration4.png" class="smooth-zigzag-anim-1">
       </div>
       <div class="container">
         <div class="intro">
-          <h1 id="introHeader"><span class="cursor">&nbsp;</span></h1>
+          <h1 id="introHeader">Talk Easily, Impress, Entertain <span class="emphasis"></span><span class="typed-text"></span> Ones</span><span class="cursor">&nbsp;</span></h1>
           <p id="introText">Chatty affords you the opportunity to organize and deliver your thoughts in an easy way using chat assets
             like GIF pictures, stickers, icons, images, cartoon text, preset audio etc in an impressive and entertaining manner.
           </p>
