Implemented the typing animation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="container">
         <div class="intro">
-          <h1 id="introHeader">Talk Easily, Impress, Entertain <span class="emphasis"></span><span class="typed-text"></span> Ones</span><span class="cursor">&nbsp;</span></h1>
+          <h1 id="introHeader">Talk Easily, Impress, Entertain <span class="emphasis"></span></span><span class="cursor">&nbsp;</span> Ones</h1>
           <p id="introText">Chatty affords you the opportunity to organize and deliver your thoughts in an easy way using chat assets
             like GIF pictures, stickers, icons, images, cartoon text, preset audio etc in an impressive and entertaining manner.
           </p>
