--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		 <meta name="keyword" content="A sticker hub to get your favourite stickers, gifs, reels, vidoes, audios and anything trending"/>
 		 <meta name="keyword" content="Chatty, a sticker hub, chatty, biggest stickerhub, next big thing"/>
     <title>Chatty</title>
+    <link href="./includes/font awesome/css/fontawesome.css" rel="stylesheet">
+    <link href="./includes/font awesome/css/brands.css" rel="stylesheet">
+    <link href="./includes/font awesome/css/solid.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="lib/bootstrap.css"/> -->
     <link rel="stylesheet" href="lib/msgConfig.css"/>
     <link rel="stylesheet" href="includes/styles/customStyle.css"/>
@@ -33,7 +36,7 @@
   <!-- End of Preloader -->
     <nav class="navbar">
       <div class="container">
-        <div class="logo">Chatty</div>
+        <div class="logo"><img src="assets/Asset 1.png" class="logoImg"><img src="assets/Asset 2.png" class="logoTxt"></div>
         <ul class="nav">
           <li><a href="#">Assets</a></li>
           <li><a href="#">Gifs</a></li>
@@ -58,12 +61,63 @@
             like GIF pictures, stickers, icons, images, cartoon text, preset audio etc in an impressive and entertaining manner.
           </p>
           <div class="btn-container">
-            <div class="btn">Learn More</div>
-            <div class="btn">Get started</div>
+            <div class="btn"><i class="fa-solid fa-user"></i>Learn More</div>
+            <div class="btn"><i class="fa-solid fa-rocket"></i>Get started</div>
           </div>
         </div>     
       </div>
     </header>
+
+    <section class="sponsor">
+      <div class="container">
+        <div>Henqsoft</div>
+        <div>Hivend</div>
+        <div>Bremwave</div>
+        <div>Emmysoft</div>
+        <div>EtimDesigns</div>
+      </div>
+    </section>
+
+    <section class="resources">
+      <div class="container">
+        <div class="left">
+          <h2>Let's Get chatty</h2>
+          <p>Chatty helps you to improve your social life by making chatting experience a memorable one. You know and WE know that getting icons to use for your socials can be a bit of a chore. That's why we created a flexible hub to allow you easily get the chat assets which helps you to translate your feelings better.</p>
+          <div class="btn-container">
+            <div class="btn"><i class="fa-solid fa-rocket"></i>Get started for free</div>
+            <div class="btn"><i class="fa-solid fa-bag-shopping"></i>View all assets</div>
+          </div>
+          <div class="asset-list">
+            <h3>Chat Assets</h3>
+            <ul>
+              <li><i class="fa-solid fa-video"></i>Gifs</li>
+              <li><i class="fa-solid fa-images"></i>Stickers</li>
+              <li><i class="fa-solid fa-icons"></i>Icons</li>
+              <li><i class="fa-solid fa-image"></i>Images</li>
+              <li><i class="fa-solid fa-file-video"></i>Cartoon snippets</li>
+              <li><i class="fa-solid fa-microphone"></i>Audio</li>
+              <li><i class="fa-solid fa-mobile-screen"></i>Reels</li>
+              <li><i class="fa-solid fa-face-laugh"></i>Emojis</li>
+              <li><i class="fa-solid fa-face-laugh-beam"></i>Memes</li>
+            </ul>
+          </div>
+        </div>
+        <div class="right">
+          <img src="assets/chat illustration8.png" alt="chatty">
+          <img src="assets/chat illustration9.png" alt="chatty">
+        </div>
+      </div>
+    </section>
+
+    <section class="search-home">
+      <div class="container">
+        <h2>Search all our chat assets</h2>
+        <p>Have you ever wondered where the stickers you use come from? Have you ever wasted time trying to save and favourite other people's asset? We too. Chatty is here to ease your hassles of scrounging up chat assets online.</p>
+        <div class="searchbar"><i class="fa-solid fa-search"></i><input type="text" name="homeSearch" id="homeSearch" placeholder="Search for interesting chat assets"></div>
+      </div>
+    </section>
+
+    <footer><div class="container">Chatty was created by Fasakin Henry, Adedoyin Emmanuel, Kachi Luiz, Heis chris and Emmanuel Etim under the company Henqsoft Solutions</div></footer>
     <script src="lib/typing.js"></script>
 </body>
 </html>
