Recreated the homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- End of Preloader -->
     <nav class="navbar">
       <div class="container">
-        <div class="logo"><img src="assets/Asset 1.png" class="logoImg"><img src="assets/Asset 2.png" class="logoTxt"></div>
+        <div class="logo"><img src="assets/Asset 1.png" class="logoImg">Chatty</div>
         <ul class="nav">
           <li><a href="#">Assets</a></li>
           <li><a href="#">Gifs</a></li>
