Finished with the homepage and started with the login page

--- a/index.html
+++ b/index.html
@@ -114,6 +114,38 @@
         <h2>Search all our chat assets</h2>
         <p>Have you ever wondered where the stickers you use come from? Have you ever wasted time trying to save and favourite other people's asset? We too. Chatty is here to ease your hassles of scrounging up chat assets online.</p>
         <div class="searchbar"><i class="fa-solid fa-search"></i><input type="text" name="homeSearch" id="homeSearch" placeholder="Search for interesting chat assets"></div>
+        <div class="asset-list-image">
+          <div class="asset-card-container">
+            <div class="asset-card">
+              <div class="top"><i class="fa-solid fa-smile"></i></div>
+              <div class="bottom">Emoji</div>
+            </div>
+            <div class="asset-card">
+              <div class="top"><i class="fa-solid fa-image"></i></div>
+              <div class="bottom">Icon</div>
+            </div>
+            <div class="asset-card">
+              <div class="top"><i class="fa-solid fa-star"></i></div>
+              <div class="bottom">Stickers</div>
+            </div>
+            <div class="asset-card">
+              <div class="top"><i class="fa-solid fa-video"></i></div>
+              <div class="bottom">Cartoons</div>
+            </div>
+            <div class="asset-card">
+              <div class="top"><i class="fa-solid fa-hourglass"></i></div>
+              <div class="bottom">Gifs</div>
+            </div>
+            <div class="asset-card">
+              <div class="top"><i class="fa-solid fa-file-audio"></i></div>
+              <div class="bottom">Audio</div>
+            </div>
+            <div class="asset-card-last">
+              <div class="top"><i class="fa-solid fa-bag-shopping"></i></div>
+              <div class="bottom">All assets</div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
