--- a/login.html
+++ b/login.html
@@ -49,12 +49,14 @@
     </nav>
 
     <main>
-        <div class="left"></div>
+        <div class="left">
+            <img src="assets/Saly-19.png" alt="" srcset="">
+        </div>
         <div class="right">
             <form>
-                <input type="email" id="email" placeholder="email">
-                <input type="password" id="password" placeholder="password">
-                <input type="text" id="username" placeholder="Username">
+                <div class="inputbox"><input type="email" id="email" placeholder="email"></div>
+                <div class="inputbox"><input type="password" id="password" placeholder="password"></div>
+                <div class="inputbox"><input type="text" id="username" placeholder="Username"></div>
             </form>
         </div>
     </main>
