Finished working on the login page and implemented the loading session

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!-- Preloader for the loading page -->
-    <!-- <div id="preloader">
+    <div id="preloader">
       <div class="waviy">
         <span style="--i:1">C</span>
         <span style="--i:2">h</span>
@@ -32,12 +32,13 @@
         <span style="--i:8">.</span>
         <span style="--i:9">.</span>
      </div>
-    </div> -->
+    </div>
   <!-- End of Preloader -->
     <nav class="navbar">
       <div class="container">
         <div class="logo"><img src="assets/Asset 1.png" class="logoImg">Chatty</div>
         <ul class="nav">
+          <li><a href="#">Home</a></li>
           <li><a href="#">Assets</a></li>
           <li><a href="#">Gifs</a></li>
           <li><a href="#">Sticker</a></li>
@@ -61,7 +62,7 @@
             like GIF pictures, stickers, icons, images, cartoon text, preset audio etc in an impressive and entertaining manner.
           </p>
           <div class="btn-container">
-            <div class="btn"><i class="fa-solid fa-user"></i>Learn More</div>
+            <a href="login.html"><div class="btn"><i class="fa-solid fa-user"></i>Learn More</div></a>
             <div class="btn"><i class="fa-solid fa-rocket"></i>Get started</div>
           </div>
         </div>     
