--- a/signup.html
+++ b/signup.html
@@ -15,13 +15,13 @@
     <!-- <link rel="stylesheet" href="lib/bootstrap.css"/> -->
     <link rel="stylesheet" href="lib/msgConfig.css"/>
     <link rel="stylesheet" href="includes/styles/customStyle.css"/>
-    <link rel="stylesheet" href="includes/styles/loginStyle.css"/>
+    <link rel="stylesheet" href="includes/styles/signupStyle.css"/>
     <!-- <script src="lib/bootstrap.js"></script> -->
     <script src="lib/sweetAlert2.js"></script>
 </head>
 <body>
     <!-- Preloader for the loading page -->
-    <div id="preloader">
+    <!-- <div id="preloader">
       <div class="waviy">
         <span style="--i:1">C</span>
         <span style="--i:2">h</span>
@@ -33,7 +33,7 @@
         <span style="--i:8">.</span>
         <span style="--i:9">.</span>
      </div>
-    </div>
+    </div> -->
   <!-- End of Preloader -->
     <nav class="navbar">
       <div class="container">
@@ -50,28 +50,8 @@
 
     <main>
         <div class="container">
-            <div class="left">
-                <h1>Welcome back <span>Creator</span></h1>
-                <p>Login today to enjoy using and uploading interesting chat assets</p>
-                <!-- <img src="assets/Saly-19.png" alt="" srcset=""> -->
-                <div class="img-container">
-                    <img src="assets/Saly-22.png" alt="" srcset="">
-                <img src="assets/Saly-13.png" alt="" srcset="">
-                </div>
-            </div>
-            <div class="right">
-                <form>
-                    <div class="inputbox"><i class="fa-solid fa-inbox"></i><input type="email" id="email" placeholder="email"></div>
-                    <div class="inputbox"><i class="fa-solid fa-highlighter"></i><input type="password" id="password" placeholder="password"><i class="fa-solid fa-eye"></i></div>
-                    <div class="inputbox"><i class="fa-solid fa-user"></i><input type="text" id="username" placeholder="Username"></div>
-                    <div class="btn-container">
-                        <button>Login</button>
-                        <button>Signup</button>
-                    </div>  
-                </form>
-            </div>
+            
         </div>
     </main>
-    <script src="lib/typing.js"></script>
 </body>
 </html>
