Uploaded pictures for the signup page

--- a/login.html
+++ b/login.html
@@ -39,6 +39,7 @@
       <div class="container">
         <div class="logo"><img src="assets/Asset 1.png" class="logoImg">Chatty</div>
         <ul class="nav">
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Assets</a></li>
           <li><a href="#">Gifs</a></li>
           <li><a href="#">Sticker</a></li>
@@ -61,12 +62,13 @@
             </div>
             <div class="right">
                 <form>
+                    <h4>login form</h4>
                     <div class="inputbox"><i class="fa-solid fa-inbox"></i><input type="email" id="email" placeholder="email"></div>
                     <div class="inputbox"><i class="fa-solid fa-highlighter"></i><input type="password" id="password" placeholder="password"><i class="fa-solid fa-eye"></i></div>
                     <div class="inputbox"><i class="fa-solid fa-user"></i><input type="text" id="username" placeholder="Username"></div>
                     <div class="btn-container">
                         <button>Login</button>
-                        <button>Signup</button>
+                        <button><a href="signup.html">Signup</a></button>
                     </div>  
                 </form>
             </div>
