--- a/signup.html
+++ b/signup.html
@@ -39,6 +39,7 @@
       <div class="container">
         <div class="logo"><img src="assets/Asset 1.png" class="logoImg">Chatty</div>
         <ul class="nav">
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Assets</a></li>
           <li><a href="#">Gifs</a></li>
           <li><a href="#">Sticker</a></li>
@@ -50,8 +51,16 @@
 
     <main>
         <div class="container">
-            
+            <div class="left"></div>
+            <div class="right">
+                <img src="./assets/chat illustration6.png">
+                <img src="./assets/chat illustration7.png">
+                <img src="./assets/chat illustration13.png">
+                <img src="./assets/chat illustration14.png">
+                <img src="./assets/chat illustration20.png">
+            </div>
         </div>
     </main>
+    <script src="lib/typing.js"></script>
 </body>
 </html>
