Worked on all the basic pages

--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
                     <div class="inputbox"><i class="fa-solid fa-highlighter"></i><input type="password" id="password" placeholder="password"><i class="fa-solid fa-eye"></i></div>
                     <div class="inputbox"><i class="fa-solid fa-user"></i><input type="text" id="username" placeholder="Username"></div>
                     <div class="btn-container">
-                        <button>Login</button>
+                        <button>Submit</button>
                         <button><a href="signup.html">Signup</a></button>
                     </div>  
                 </form>
