--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
      </div>
     </div> -->
   <!-- End of Preloader -->
-    <nav class="navbar">
+    <!-- <nav class="navbar">
       <div class="container">
         <div class="logo"><img src="assets/Asset 1.png" class="logoImg">Chatty</div>
         <ul class="nav">
@@ -47,11 +47,42 @@
         </ul>
           <div class="btn">Sign up</div>
       </div>      
-    </nav>
+    </nav> -->
+
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="assets/Asset 1.png" class="logoImg">
+                Chatty
+            </div>
+            <div class="close-btn"><a href="index.html">X</a></div>
+        </div>
+    </header>
 
     <main>
         <div class="container">
-            <div class="left"></div>
+            <div class="left">
+                <form>
+                    <h1>Let's get <span>chatty</span></h1>
+                    <p> Chatty is a great tool to engage your social life with the use of chat assets. Start the journey with us by providing your details!</p>
+                    <h4>Signup details</h4>
+                    <div class="inputs-box">
+                        <div class="inputs"><i class="fa-solid fa-person"></i><input type="text" placeholder="username"></div>
+                        <div class="inputs"><i class="fa-solid fa-sign"></i><input type="password" placeholder="Password"></div>
+                        <div class="inputs"><i class="class fa-solid fa-inbox"></i><input type="email" placeholder="Email"></div>
+                        <div class="inputs"><i class="fa-solid fa-phone"></i><input type="tel" placeholder="Mobile number"></div>
+                        <div class="inputs"><i class="fa-solid fa-user"></i><input type="text" placeholder="Surname"></div>
+                        <div class="inputs"><i class="fa-solid fa-user"></i><input type="text" placeholder="First name"></div>
+                        <div class="inputs"><i class="fa-solid fa-user"></i><input type="text" placeholder="Middle name"></div>
+                        <div class="inputs"><i class="fa-solid fa-calendar-check"></i><input type="date" placeholder="Date of birth"></div>
+                    </div>
+
+                    <div class="btn-container">
+                        <button class="btn">Submit</button>
+                        <button class="btn"><a href="login.html">Login</a></button>
+                    </div>
+                </form>
+            </div>
             <div class="right">
                 <img src="./assets/chat illustration6.png">
                 <img src="./assets/chat illustration7.png">
