--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             like GIF pictures, stickers, icons, images, cartoon text, preset audio etc in an impressive and entertaining manner.
           </p>
           <div class="btn-container">
-            <a href="login.html"><div class="btn"><i class="fa-solid fa-user"></i>Learn More</div></a>
+            <a href="login.html"><div class="btn"><i class="fa-solid fa-book-open"></i>Learn More</div></a>
             <div class="btn"><i class="fa-solid fa-rocket"></i>Get started</div>
           </div>
         </div>     
